--- a/src/app/adm-home/lookup-management/lookup-management.component.html
+++ b/src/app/adm-home/lookup-management/lookup-management.component.html
@@ -1,11 +1,17 @@
-<button class="btn btn-primary" (click)="toggleViews('upload')">Upload Excel</button> &nbsp;&nbsp;&nbsp;
-<button class="btn btn-primary" (click)="toggleViews('create')">Create New</button>&nbsp;&nbsp;&nbsp;
-<button class="btn btn-primary" (click)="toggleViews('view')">View All</button>
+<button class="btn btn-primary" pTooltip="Upload the Excel for new Lookups" (click)="toggleViews('upload')">Upload
+    Excel</button> &nbsp;&nbsp;&nbsp;
+<button class="btn btn-primary" pTooltip="create a new Lookup" (click)="toggleViews('create')">Create
+    New</button>&nbsp;&nbsp;&nbsp;
+<button class="btn btn-primary" pTooltip="View all the existing lookups" (click)="toggleViews('view')">View All</button>
 <br>
 <br>
 <div *ngIf="upload">
-    <input type="file" name="lookupExcel" (change)="onSelectFile($event)" id="lookupExcel">
-    <button class="btn btn-primary" (click)="uploadLookupExcel()">Upload Excel</button>
+    <input type="file" name="lookupExcel" pTooltip="Select the Excel for new Lookups" (change)="onSelectFile($event)"
+        id="lookupExcel">
+    <button class="btn btn-primary" pTooltip="Upload the selected Excel" (click)="uploadLookupExcel()">Upload
+        Excel</button>
+    <button class="btn btn-primary" pTooltip="Download a sample Excel -> YTD" (click)="downloadSample()">Download
+        Sample</button>
 </div>
 <br>
 <br>
@@ -15,8 +21,9 @@
             <tr>
                 <th>Lookup Definition Name</th>
                 <td>
-                    <div class=" form-group">
+                    <div class="form-group">
                         <select name="lookupDefName" formControlName="lookupDefName" class="form-control"
+                            pTooltip="Download a sample Excel -> Should be a p-dropdown"
                             [ngClass]="{ 'is-invalid': submitted && f.lookupDefName.errors }">
                             <option *ngFor="let lookupName of lookupDefNames; let i = index;" [selected]="i==0">
                                 {{lookupName}}</option>
@@ -31,7 +38,7 @@
                 <th>Lookup Value</th>
                 <td>
                     <div class="form-group">
-                        <input type="lookupValue" class="form-control"
+                        <input type="lookupValue" class="form-control" pTooltip="Lookup Value will not be visible"
                             [ngClass]="{ 'is-invalid': submitted && f.lookupValue.errors }"
                             formControlName="lookupValue" id="lookupValue" placeholder="Lookup Value"
                             style="width: 100%;">
@@ -45,7 +52,7 @@
                 <th>Lookup Display Name</th>
                 <td>
                     <div class="form-group">
-                        <input type="text" class="form-control"
+                        <input type="text" class="form-control" pTooltip="Display name would be visible in UI"
                             [ngClass]="{ 'is-invalid': submitted && f.displayName.errors }"
                             formControlName="displayName" id="displayName" placeholder="Display Name"
                             style="width: 100%;">
@@ -57,8 +64,9 @@
             </tr>
             <tr>
 
-                <td><input type="submit" class="btn-primary" value="Create Lookup"></td>
-                <td><input type="reset" class="btn-primary" value="Reset"></td>
+                <td><input type="submit" class="btn-primary" pTooltip="Create lookup with given details"
+                        value="Create Lookup"></td>
+                <td><input type="reset" class="btn-primary" pTooltip="Reset the form" value="Reset"></td>
 
         </table>
     </form>
@@ -70,7 +78,7 @@
     [rowsPerPageOptions]="[5, 10,15]" [rows]="10">
     <ng-template pTemplate="caption">
         <i class="pi pi-search" style="margin:4px 4px 0 0"></i>
-        <input type="text" pInputText size="50" placeholder="Global Filter"
+        <input type="text" pInputText size="50" placeholder="Global Filter" pTooltip="Global Filter"
             (input)="lookupTable.filterGlobal($event.target.value, 'contains')" style="width:auto">
     </ng-template>
     <ng-template pTemplate="header">
@@ -87,7 +95,7 @@
         </tr>
         <tr>
             <th>
-                <p-dropdown [options]="lookupDefinitions"
+                <p-dropdown [options]="lookupDefinitions" pTooltip="Filter By definition name"
                     (onChange)="lookupTable.filter($event.value, 'lookupDefName', 'equals')"
                     styleClass="p-column-filter" placeholder="Select a Status" [showClear]="true">
                     <ng-template let-option pTemplate="item">
@@ -96,23 +104,23 @@
                 </p-dropdown>
             </th>
             <th>
-                <input pInputText type="text"
-                    (input)="lookupTable.filter($event.target.value, 'lookupValue', 'contains')" placeholder="Value"
-                    class="p-column-filter">
+                <input pInputText type="text" pTooltip="Filter By Value"
+                    (input)="lookupTable.filter($event.target.value, 'lookupValue', 'contains')"
+                    placeholder="Filter By Value" class="p-column-filter">
             </th>
             <th>
-                <input pInputText type="text"
+                <input pInputText type="text" pTooltip="Filter By Display Name"
                     (input)="lookupTable.filter($event.target.value, 'displayName', 'contains')"
                     placeholder="Display Name" class="p-column-filter">
             </th>
             <th>
-                <p-calendar (onSelect)="onDateSelect($event)"
+                <p-calendar (onSelect)="onDateSelect($event)" pTooltip="Filter By created Date"
                     (onClearClick)="lookupTable.filter('', 'date', 'createdDate')" [showButtonBar]="true"
                     styleClass="p-column-filter" placeholder="Created Date" [readonlyInput]="true">
                 </p-calendar>
             </th>
             <th>
-                <p-calendar (onSelect)="onDateSelect($event)"
+                <p-calendar (onSelect)="onDateSelect($event)" pTooltip="Filter By Updated Date"
                     (onClearClick)="lookupTable.filter('', 'date', 'updatedDate')" [showButtonBar]="true"
                     styleClass="p-column-filter" placeholder="Updated Date" [readonlyInput]="true">
                 </p-calendar>
@@ -127,7 +135,7 @@
                 <p-cellEditor>
                     <ng-template pTemplate="input">
                         <p-dropdown [options]="lookupDefinitions" [(ngModel)]="lookup.lookupDefName"
-                            [style]="{'width':'auto', 'height':'auto'}">
+                            pTooltip="Lookup Definition Name" [style]="{'width':'auto', 'height':'auto'}">
                         </p-dropdown>
                     </ng-template>
                     <ng-template pTemplate="output">
@@ -138,7 +146,8 @@
             <td pEditableColumn>
                 <p-cellEditor>
                     <ng-template pTemplate="input">
-                        <input pInputText type="text" [(ngModel)]="lookup.lookupValue" lookupValue>
+                        <input pInputText type="text" [(ngModel)]="lookup.lookupValue"
+                            pTooltip="Lookup Value to be stored in DB" lookupValue>
                     </ng-template>
                     <ng-template pTemplate="output">
                         {{lookup.lookupValue}}
@@ -148,7 +157,8 @@
             <td pEditableColumn>
                 <p-cellEditor>
                     <ng-template pTemplate="input">
-                        <input pInputText type="text" [(ngModel)]="lookup.displayName" displayName>
+                        <input pInputText type="text" [(ngModel)]="lookup.displayName"
+                            pTooltip="Display Name to be viewed in UI" displayName>
                     </ng-template>
                     <ng-template pTemplate="output">
                         {{lookup.displayName}}
@@ -161,13 +171,11 @@
             <td pEditableColumn>{{lookup.updateDate === null ? "" : lookup.updateDate| date:'dd-MMM-yyyy'}}</td>
             <td style="text-align:center">
                 <button class="btn-primary" (click)="toggleDelete(lookup.lookupId)">
-                    <div *ngIf="lookup.deleted != 'Y'">Delete</div>
-                    <div *ngIf="lookup.deleted === 'Y'">Undelete</div>
+                    <div pTooltip="Delete Lookup" *ngIf="lookup.deleted != 'Y'">Delete</div>
+                    <div pTooltip="Undelete Lookup" *ngIf="lookup.deleted === 'Y'">Undelete</div>
                 </button>
-                <button *ngIf="editing" pButton type="button" pCancelEditableRow icon="pi pi-times"
-                    class="ui-button-danger btn-primary" (click)="onRowEditCancel(lookup, ri)">Cancel</button>
             </td>
-            <td><button class="btn-primary" (click)="updateLookup(lookup)">Update</button></td>
+            <td><button pTooltip="Update Lookup" class="btn-primary" (click)="updateLookup(lookup)">Update</button></td>
         </tr>
     </ng-template>
 </p-table>
