--- a/src/app/common/home/home.component.html
+++ b/src/app/common/home/home.component.html
@@ -1,15 +1,12 @@
-<br>
-<div style="padding-left: 1.25%;">
-  <div class="card" style="width: 18rem;">
-    <div class="card-body">
-      <h5 class="card-pTooltip">Home Page</h5>
-      <h6 class="card-subpTooltip mb-2 text-muted">Services List</h6>
-      <p class="card-text">This page contains the list of services provided, along with links.</p>
-      <button routerLink="/register" class="btn btn-primary card-link">Register</button>
-      <button routerLink="/login" class="btn btn-primary card-link">Login</button>
-    </div>
+<div class="card" style="width: 18rem;">
+  <div class="card-body">
+    <h5 class="card-pTooltip">Home Page</h5>
+    <h6 class="card-subpTooltip mb-2 text-muted">Services List</h6>
+    <p class="card-text">This page contains the list of services provided, along with links.</p>
+    <button routerLink="/register" pTooltip="Sign Up!" class="btn btn-primary card-link">Register</button>
+    <button routerLink="/login" pTooltip="Login Screen" class="btn btn-primary card-link">Login</button>
   </div>
-  <section>
-    <div class="snow1"></div>
-  </section>
 </div>
+<section>
+  <div class="snow1"></div>
+</section>
