--- a/src/app/common/login/login.component.html
+++ b/src/app/common/login/login.component.html
@@ -1,49 +1,47 @@
-<br>
-<div style="padding-left: 1.25%">
-  <form [formGroup]="loginForm" (ngSubmit)="login()">
-    <table class="table table-striped" style="width: 25%">
-      <tr>
-        <td colspan="3">
-          <div class="form-group">
-            <input type="text" formControlName="username" class="form-control"
-              [ngClass]="{ 'is-invalid': submitted && f.username.errors }" name="username" id="username"
-              placeholder="Username" style="width: 100%;">
-            <div *ngIf="submitted && f.username.errors" class="invalid-feedback">
-              <div *ngIf="f.username.errors.required">User Name is required</div>
-            </div>
+<form [formGroup]="loginForm" (ngSubmit)="login()">
+  <table class="table table-striped" style="width: 25%">
+    <tr>
+      <td colspan="3">
+        <div class="form-group">
+          <input type="text" pTooltip="Provide your User Name" formControlName="username" class="form-control"
+            [ngClass]="{ 'is-invalid': submitted && f.username.errors }" name="username" id="username"
+            placeholder="Username" style="width: 100%;">
+          <div *ngIf="submitted && f.username.errors" class="invalid-feedback">
+            <div *ngIf="f.username.errors.required">User Name is required</div>
           </div>
-        </td>
-      </tr>
-      <tr>
-        <td colspan="3">
-          <div class="form-group">
-            <input type="password" formControlName="custPass" class="form-control"
-              [ngClass]="{ 'is-invalid': submitted && f.custPass.errors }" name="custPass" id="custPass"
-              placeholder="Password" style="width: 100%;">
-            <div *ngIf="submitted && f.custPass.errors" class="invalid-feedback">
-              <div *ngIf="f.custPass.errors.required">Password is required</div>
-              <div *ngIf="f.custPass.errors.minlength">Password must be at least 6 characters</div>
-            </div>
+        </div>
+      </td>
+    </tr>
+    <tr>
+      <td colspan="3">
+        <div class="form-group">
+          <input type="password" pTooltip="Type Your Password" formControlName="custPass" class="form-control"
+            [ngClass]="{ 'is-invalid': submitted && f.custPass.errors }" name="custPass" id="custPass"
+            placeholder="Password" style="width: 100%;">
+          <div *ngIf="submitted && f.custPass.errors" class="invalid-feedback">
+            <div *ngIf="f.custPass.errors.required">Password is required</div>
+            <div *ngIf="f.custPass.errors.minlength">Password must be at least 6 characters</div>
           </div>
-        </td>
-      </tr>
-      <tr>
-        <td>
-          <button type="submit" class="btn btn-primary">Login</button>
-        </td>
-        <td>
-          <button class="btn btn-primary" type="reset">Reset</button>
-        </td>
-        <td>
-          <button class="btn btn-primary" routerLink="/register">
-            Register</button>
-        </td>
-      </tr>
-      <tr>
-        <td colspan="3">
-          <button class="btn btn-warning" routerLink="/restore" value="Forgot Password">Forgot Password</button>
-        </td>
-      </tr>
-    </table>
-  </form>
-</div>
+        </div>
+      </td>
+    </tr>
+    <tr>
+      <td>
+        <button type="submit" pTooltip="Sign In" class="btn btn-primary">Login</button>
+      </td>
+      <td>
+        <button class="btn btn-primary" pTooltip="Reset the form" type="reset">Reset</button>
+      </td>
+      <td>
+        <button class="btn btn-primary" pTooltip="Sign Up!" routerLink="/register">
+          Register</button>
+      </td>
+    </tr>
+    <tr>
+      <td colspan="3">
+        <button class="btn btn-warning" pTooltip="Reset Password Using Mail" routerLink="/restore"
+          value="Forgot Password">Forgot Password</button>
+      </td>
+    </tr>
+  </table>
+</form>
