--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div id="container">
   <app-sidebar></app-sidebar>
   <div id="content">
-    <div style="padding-left: 20px;">
+    <div style="padding-left: 20px; padding-top:20px">
       <router-outlet></router-outlet>
     </div>
   </div>
