--- a/src/app/restore-password/restore-password.component.html
+++ b/src/app/restore-password/restore-password.component.html
@@ -12,7 +12,7 @@
       <tr>
         <td colspan="2">
           <div class="form-group">
-            <input type="text" formControlName="userName" class="form-control"
+            <input type="text" formControlName="userName" class="form-control" pTooltip="Provide the User Name"
               [ngClass]="{ 'is-invalid': submitted && f.userName.errors }" id="userName"
               placeholder="Your User Name Please" style="width: 100%;">
             <div *ngIf="submitted && f.userName.errors" class="invalid-feedback">
@@ -25,7 +25,7 @@
       <tr>
         <td colspan="2">
           <div class="form-group">
-            <input type="text" formControlName="userId" class="form-control"
+            <input type="text" formControlName="userId" class="form-control" pTooltip="Provide the User Id"
               [ngClass]="{ 'is-invalid': submitted && f.userId.errors }" placeholder="Your User Id Please"
               style="width: 100%;">
             <div *ngIf="submitted && f.userId.errors" class="invalid-feedback">
@@ -38,7 +38,8 @@
         <td colspan="2">
           <div class="form-group">
             <input type="email" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.userMail.errors }"
-              formControlName="userMail" id="custMail" placeholder="Registered Email" style="width: 100%;">
+              pTooltip="Provide the Email Id to recieve OTP" formControlName="userMail" id="custMail"
+              placeholder="Registered Email" style="width: 100%;">
             <div *ngIf="submitted && f.userMail.errors" class="invalid-feedback">
               <div *ngIf="f.userMail.errors.required">Mail Id is required</div>
             </div>
@@ -49,7 +50,8 @@
         <td colspan="2">
           <div class="form-group">
             <input type="tel" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.userMob.errors }"
-              id="userMob" formControlName="userMob" placeholder="MobileNumber" style="width: 100%;">
+              pTooltip="Provide the Mobile# for verification" id="userMob" formControlName="userMob"
+              placeholder="MobileNumber" style="width: 100%;">
             <div *ngIf="submitted && f.userMob.errors" class="invalid-feedback">
               <div *ngIf="f.userMob.errors.required">Mobile Number is required</div>
             </div>
@@ -57,8 +59,8 @@
         </td>
       </tr>
       <tr>
-        <td><input type="submit" class="btn-primary" value="Submit Request"></td>
-        <td><input type="reset" class="btn-primary" value="Reset"></td>
+        <td><input type="submit" pTooltip="Request the OTP" class="btn-primary" value="Request the OTP"></td>
+        <td><input type="reset" pTooltip="Reset the form" class="btn-primary" value="Reset"></td>
       </tr>
     </table>
   </form>
@@ -66,44 +68,45 @@
 
 <div *ngIf="otpSubmit" class="float-center">
   <form [formGroup]="otpForm" (ngSubmit)="otpFormSubmit()">
-      <table class="table table-striped table-hover" style="width: 25rem;">
-          <tr>
-            <td colspan="2">
-              <div class="form-group">
-                <input type="text" formControlName="otpFormUserName" class="form-control"
-                  [ngClass]="{ 'is-invalid': otpSubmitted && of.otpFormUserName.errors }" id="otpFormUserName"
-                  placeholder="Your User Name Please" style="width: 100%;">
-                <div *ngIf="otpSubmitted && of.otpFormUserName.errors" class="invalid-feedback">                    
-                  <div *ngIf="of.otpFormUserName.errors.required">User Name is required</div>
-                </div>
-              </div>
-            </td>
-          </tr>
-          <tr>
-            <td colspan="2">
-              <div class="form-group">
-                <input type="text" formControlName="otpValue" class="form-control"
-                  [ngClass]="{ 'is-invalid': otpSubmitted && of.otpValue.errors }" placeholder="OTP Please"
-                  style="width: 100%;">
-                <div *ngIf="otpSubmitted && of.otpValue.errors" class="invalid-feedback">
-                  <div *ngIf="of.otpValue.errors.required">Enter Your OTP.</div>
-                </div>
-              </div>
-            </td>
-          </tr>
-          <td><input type="submit" class="btn-primary" value="Submit OTP"></td>
-        <td><input type="reset" class="btn-primary" value="Reset"></td>
-      </table>    
-  </form>  
-</div>
-
-<div *ngIf="rstPwd" class="float-left">
-<form [formGroup]="resetPwdForm" (ngSubmit)="resetPwdSubmit()">
     <table class="table table-striped table-hover" style="width: 25rem;">
       <tr>
         <td colspan="2">
           <div class="form-group">
-            <input type="text" formControlName="pwdUserName" class="form-control"
+            <input type="text" formControlName="otpFormUserName" class="form-control"
+              pTooltip="User Name to Reset Password"
+              [ngClass]="{ 'is-invalid': otpSubmitted && of.otpFormUserName.errors }" id="otpFormUserName"
+              placeholder="Your User Name Please" style="width: 100%;">
+            <div *ngIf="otpSubmitted && of.otpFormUserName.errors" class="invalid-feedback">
+              <div *ngIf="of.otpFormUserName.errors.required">User Name is required</div>
+            </div>
+          </div>
+        </td>
+      </tr>
+      <tr>
+        <td colspan="2">
+          <div class="form-group">
+            <input type="text" formControlName="otpValue" class="form-control" pTooltip="Enter the received OTP"
+              [ngClass]="{ 'is-invalid': otpSubmitted && of.otpValue.errors }" placeholder="OTP Please"
+              style="width: 100%;">
+            <div *ngIf="otpSubmitted && of.otpValue.errors" class="invalid-feedback">
+              <div *ngIf="of.otpValue.errors.required">Enter Your OTP.</div>
+            </div>
+          </div>
+        </td>
+      </tr>
+      <td><input type="submit" pTooltip="Submit the OTP" class="btn-primary" value="Submit OTP"></td>
+      <td><input type="reset" pTooltip="Reset the Form" class="btn-primary" value="Reset"></td>
+    </table>
+  </form>
+</div>
+
+<div *ngIf="rstPwd" class="float-left">
+  <form [formGroup]="resetPwdForm" (ngSubmit)="resetPwdSubmit()">
+    <table class="table table-striped table-hover" style="width: 25rem;">
+      <tr>
+        <td colspan="2">
+          <div class="form-group">
+            <input type="text" formControlName="pwdUserName" class="form-control" pTooltip="Provide UserName"
               [ngClass]="{ 'is-invalid': passSubmitted && pf.pwdUserName.errors }" id="userName"
               placeholder="Your User Name Please" style="width: 100%;">
             <div *ngIf="passSubmitted && pf.pwdUserName.errors" class="invalid-feedback">
@@ -115,7 +118,7 @@
       <tr>
         <td colspan="2">
           <div class="form-group">
-            <input type="password" formControlName="newPassword" class="form-control"
+            <input type="password" formControlName="newPassword" class="form-control" pTooltip="New Password to set"
               [ngClass]="{ 'is-invalid': passSubmitted && pf.newPassword.errors }" placeholder="New Password"
               style="width: 100%;">
             <div *ngIf="passSubmitted && pf.newPassword.errors" class="invalid-feedback">
@@ -128,8 +131,8 @@
         <td colspan="2">
           <div class="form-group">
             <input type="password" formControlName="reNewPassword" class="form-control"
-              [ngClass]="{ 'is-invalid': submitted && pf.reNewPassword.errors }" placeholder="Retype the  Password"
-              style="width: 100%;">
+              pTooltip="Re enter the above Password" [ngClass]="{ 'is-invalid': submitted && pf.reNewPassword.errors }"
+              placeholder="Retype the  Password" style="width: 100%;">
             <div *ngIf="submitted && pf.reNewPassword.errors" class="invalid-feedback">
               <div *ngIf="pf.reNewPassword.errors.required">Confirm the New Password</div>
             </div>
@@ -137,9 +140,9 @@
         </td>
       </tr>
       <tr>
-          <td><input type="submit" class="btn-primary" value="Submit Password"></td>
-          <td><input type="reset" class="btn-primary" value="Reset"></td>
+        <td><input type="submit" class="btn-primary" pTooltip="Submit the new Password" value="Submit Password"></td>
+        <td><input type="reset" class="btn-primary" pTooltip="Reset the form" value="Reset"></td>
       </tr>
-  </table>
+    </table>
   </form>
 </div>
